<?xml version="1.0" encoding="UTF-8"?>
<!--
  ~ Copyright 2018 - 2021 Swiss Federal Institute of Technology Lausanne (EPFL)
  ~ Copyright 2021 - 2024 EBRAINS AISBL
  ~ Copyright 2024 - 2025 ETH Zurich
  ~
  ~  Licensed under the Apache License, Version 2.0 (the "License");
  ~  you may not use this file except in compliance with the License.
  ~  You may obtain a copy of the License at
  ~
  ~  http://www.apache.org/licenses/LICENSE-2.0.
  ~
  ~  Unless required by applicable law or agreed to in writing, software
  ~  distributed under the License is distributed on an "AS IS" BASIS,
  ~  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~  See the License for the specific language governing permissions and
  ~   limitations under the License.
  ~
  ~  This open source software code was developed in part or in whole in the
  ~  Human Brain Project, funded from the European Union's Horizon 2020
  ~  Framework Programme for Research and Innovation under
  ~  Specific Grant Agreements No. 720270, No. 785907, and No. 945539
  ~  (Human Brain Project SGA1, SGA2 and SGA3).
  -->

<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>org.marmotgraph.search</groupId>
    <artifactId>search-parent</artifactId>
    <version>4.0.0</version>
    <packaging>pom</packaging>
    <name>MarmotGraph Search parent</name>
    <description>This is the parent of MarmotGraph Search</description>
    <url>https://marmotgraph.org</url>
    <modules>
        <module>common</module>
        <module>search</module>
        <module>indexing</module>
    </modules>
    <scm>
        <url>https://github.com/marmotgraph/marmotgraph-search.git</url>
    </scm>
    <developers>
        <developer>
            <name>Oliver Schmid</name>
        </developer>
    </developers>
    <properties>
        <java.version>21</java.version>
        <maven.compiler.source>${java.version}</maven.compiler.source>
        <maven.compiler.target>${java.version}</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties>

    <licenses>
        <license>
            <name>Apache License, Version 2.0</name>
            <url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
            <distribution>repo</distribution>
        </license>
    </licenses>

    <dependencyManagement>
        <dependencies>
            <!-- Spring Boot BOM -->
            <dependency>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-dependencies</artifactId>
                <version>3.2.0</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>

            <dependency>
                <groupId>io.sentry</groupId>
                <artifactId>sentry-spring-boot-starter</artifactId>
                <version>6.9.0</version>
            </dependency>

            <!-- Your modules -->
            <dependency>
                <groupId>org.marmotgraph.search</groupId>
                <artifactId>common</artifactId>
                <version>${project.version}</version>
            </dependency>

            <dependency>
                <groupId>org.marmotgraph.search</groupId>
                <artifactId>search</artifactId>
                <version>${project.version}</version>
            </dependency>

            <dependency>
                <groupId>org.marmotgraph.search</groupId>
                <artifactId>indexing</artifactId>
                <version>${project.version}</version>
            </dependency>

            <dependency>
                <groupId>org.projectlombok</groupId>
                <artifactId>lombok</artifactId>
                <version>1.18.42</version>
            </dependency>

            <dependency>
                <groupId>org.apache.commons</groupId>
                <artifactId>commons-text</artifactId>
                <version>1.11.0</version>
            </dependency>

            <dependency>
                <groupId>commons-io</groupId>
                <artifactId>commons-io</artifactId>
                <version>2.16.1</version>
            </dependency>

            <dependency>
                <groupId>org.springdoc</groupId>
                <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
                <version>2.3.0</version>
            </dependency>

        </dependencies>
    </dependencyManagement>
    <dependencies>
        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>org.apache.commons</groupId>
            <artifactId>commons-lang3</artifactId>
        </dependency>
        <dependency>
            <groupId>org.apache.commons</groupId>
            <artifactId>commons-text</artifactId>
        </dependency>
        <dependency>
            <groupId>org.springframework</groupId>
            <artifactId>spring-core</artifactId>
        </dependency>
        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-api</artifactId>
        </dependency>
        <dependency>
            <groupId>org.springframework</groupId>
            <artifactId>spring-webflux</artifactId>
        </dependency>

        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-test</artifactId>
            <scope>test</scope>
        </dependency>
    </dependencies>
    <build>
<!--        <finalName>${project.artifactId}</finalName>-->
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <configuration>
                    <compilerArgs>
                        <arg>-parameters</arg>
                    </compilerArgs>
                </configuration>
            </plugin>
<!--            &lt;!&ndash;            <plugin>&ndash;&gt;-->
<!--            &lt;!&ndash;                <groupId>org.sonatype.central</groupId>&ndash;&gt;-->
<!--            &lt;!&ndash;                <artifactId>central-publishing-maven-plugin</artifactId>&ndash;&gt;-->
<!--            &lt;!&ndash;                <version>0.6.0</version>&ndash;&gt;-->
<!--            &lt;!&ndash;                <extensions>true</extensions>&ndash;&gt;-->
<!--            &lt;!&ndash;                <configuration>&ndash;&gt;-->
<!--            &lt;!&ndash;                    <publishingServerId>central</publishingServerId>&ndash;&gt;-->
<!--            &lt;!&ndash;                </configuration>&ndash;&gt;-->
<!--            &lt;!&ndash;            </plugin>&ndash;&gt;-->
<!--            <plugin>-->
<!--                <groupId>org.apache.maven.plugins</groupId>-->
<!--                <artifactId>maven-source-plugin</artifactId>-->
<!--                <version>3.4.0</version>-->
<!--                <executions>-->
<!--                    <execution>-->
<!--                        <id>attach-sources</id>-->
<!--                        <goals>-->
<!--                            <goal>jar-no-fork</goal>-->
<!--                        </goals>-->
<!--                    </execution>-->
<!--                </executions>-->
<!--            </plugin>-->
<!--            <plugin>-->
<!--                <groupId>org.apache.maven.plugins</groupId>-->
<!--                <artifactId>maven-javadoc-plugin</artifactId>-->
<!--                <version>3.12.0</version>-->
<!--                <executions>-->
<!--                    <execution>-->
<!--                        <id>attach-javadocs</id>-->
<!--                        <goals>-->
<!--                            <goal>jar</goal>-->
<!--                        </goals>-->
<!--                    </execution>-->
<!--                </executions>-->
<!--            </plugin>-->
<!--            &lt;!&ndash;            <plugin>&ndash;&gt;-->
<!--            &lt;!&ndash;                <groupId>org.apache.maven.plugins</groupId>&ndash;&gt;-->
<!--            &lt;!&ndash;                <artifactId>maven-gpg-plugin</artifactId>&ndash;&gt;-->
<!--            &lt;!&ndash;                <executions>&ndash;&gt;-->
<!--            &lt;!&ndash;                    <execution>&ndash;&gt;-->
<!--            &lt;!&ndash;                        <id>sign-artifacts</id>&ndash;&gt;-->
<!--            &lt;!&ndash;                        <phase>verify</phase>&ndash;&gt;-->
<!--            &lt;!&ndash;                        <goals>&ndash;&gt;-->
<!--            &lt;!&ndash;                            <goal>sign</goal>&ndash;&gt;-->
<!--            &lt;!&ndash;                        </goals>&ndash;&gt;-->
<!--            &lt;!&ndash;                        <configuration>&ndash;&gt;-->
<!--            &lt;!&ndash;                            <keyname>${gpg.keyname}</keyname>&ndash;&gt;-->
<!--            &lt;!&ndash;                            <passphraseServerId>${gpg.keyname}</passphraseServerId>&ndash;&gt;-->
<!--            &lt;!&ndash;                        </configuration>&ndash;&gt;-->
<!--            &lt;!&ndash;                    </execution>&ndash;&gt;-->
<!--            &lt;!&ndash;                </executions>&ndash;&gt;-->
<!--            &lt;!&ndash;            </plugin>&ndash;&gt;-->
        </plugins>
    </build>
</project>
